<resources>
    <string name="title_schedule" translation_description="The title for the schedule screen where user can see their schedule for Google I/O.">Schedule</string>
    <string name="title_home" translation_description="The title for the Home screen where user can all the updates from Google I/O team.">Home</string>
    <string name="title_map" translation_description="The title for the map screen where user can see the map of the venue.">Map</string>
    <string name="title_explore_io" translation_description="The title for the Augmented reality exploration screen where the user can explore the I/O venue in AR.">Explore I/O</string>
    <string name="title_info" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>
    <string name="filters" translation_description="The label for the button to filter sessions by their topics, room, and so on.">Filters</string>
    <string name="category_heading_tracks" translation_description="Label in the filters panel above session topics (Android, Cloud, etc.)">Topics</string>
    <string name="category_heading_types" translation_description="Label in the filters panel above event types (Sessions, Codelabs, etc.)">Types</string>
    <string name="clear_all" translation_description="The label for the button to clear all the filter conditions.">Clear all</string>
    <string name="reset" translation_description="The label for the button to reset the filter conditions.">Reset</string>
    <string name="agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>
    <string name="menu_item_session_location" translation_description="The label for the location of the session.">Session location</string>
    <string name="menu_item_session_star" translation_description="The label for starring of the session.">Star session</string>
    <string name="a11y_show_navigation" translation_description="Description of the menu button shown on top-level screens.">Show navigation menu</string>
    <string name="menu_item_share_session" translation_description="The label for the button to share this session on SNS, etc.">Share session</string>
    <string name="settings_title" translation_description="Title for the tab that shows all the settings of this app.">Settings</string>
    <string name="version_name" translation_description="Label for the app version name in Settings.">Version %s</string>
    <string name="faq_title" translation_description="The title for the tab that shows FAQ.">FAQ</string>
    <string name="about_title" translation_description="Title for the 'About' tab that shows miscellaneous info.">About</string>
    <string name="travel_what_to_bring_title" translation_description="Header label for what to bring for the event">What to bring for the event</string>
    <string name="travel_hotels_title" translation_description="Header label for hotels information for travel">Hotels</string>
    <string name="travel_getting_to_mountain_view_title" translation_description="Header label for getting to Mountain View for travel">Getting to Mountain View</string>
    <string name="travel_getting_to_shoreline_title" translation_description="Header label for getting to Mountain View for travel">Getting to Shoreline Amphitheatre</string>
    <string name="travel_shuttle_service_title" translation_description="Header label for Shuttle service for travel">Shuttle service</string>
    <string name="travel_off_site_parking_title" translation_description="Header label for off-site parking for travel">Off-site parking</string>
    <string name="travel_for_public_transportation_title" translation_description="Header label public transportation for travel">Public transportation</string>
    <string name="travel_biking_title" translation_description="Header label for biking for travel">Biking</string>
    <string name="travel_ridesharing_title" translation_description="Header label for ride sharing for travel">Ridesharing</string>
    <string name="travel_airport_transfers_title" translation_description="Header label for airport transfers for travel">Airport Transfers</string>
    <string name="travel_what_to_bring_description" translation_description="Information on what to bring for the event"><![CDATA[Google I/O is an outdoor festival. While this is a big part of what makes I/O special, it also means there are some things to consider. Sessions will happen inside climate-controlled tents, but sunscreen, sunglasses, and an extra layer for the evening are recommended. I/O is a casual event, so keep this in mind when deciding what to wear.]]></string>
    <string name="travel_hotels_description" translation_description="Information on hotels for travel"><![CDATA[We have room blocks at many local hotels. The list of hotels and room availability will be updated regularly. Please use the map below to find the hotel that’s best for you. <a href="https://www.google.com/maps/d/u/1/viewer?mid=11u43dDY9LID1uf46p4y7ba2_TbE_Y8-W&ll=37.383600316075075%2C-122.07007405000002&z=12">Hotel Map</a>]]></string>
    <string name="travel_getting_to_mountain_view_description" translation_description="Information on getting to Mountain View for travel"><![CDATA[Here are the three major airports in the Bay Area with international airline service:<br> <a href="https://www.google.com/maps/dir/San+Francisco+International+Airport,+San+Francisco,+CA+94128/Shoreline+Amphitheatre,+Amphitheatre+Parkway,+Mountain+View,+CA/@37.5206703,-122.3803144,11z/data=!3m1!4b1!4m18!4m17!1m5!1m1!1s0x808f778c55555555:0xa4f25c571acded3f!2m2!1d-122.3789554!2d37.6213129!1m5!1m1!1s0x808fb9f776f5e165:0x1ddf014a1b553f3d!2m2!1d-122.0807647!2d37.4267703!2m3!6e0!7e2!8j1463556000!3e0?hl=en">San Francisco International Airport (SFO)</a> ~24 miles<br><br> <a href="https://www.google.com/maps/dir/Oakland+International+Airport,+Oakland,+CA/Shoreline+Amphitheatre,+Amphitheatre+Parkway,+Mountain+View,+CA/@37.5755915,-122.270249,11z/data=!3m1!4b1!4m18!4m17!1m5!1m1!1s0x808f845402c0a641:0xb0630c0f03017460!2m2!1d-122.2197428!2d37.7125689!1m5!1m1!1s0x808fb9f776f5e165:0x1ddf014a1b553f3d!2m2!1d-122.0807647!2d37.4267703!2m3!6e0!7e2!8j1463556000!3e0?hl=en">Oakland International Airport (OAK)</a> ~32 miles<br><br> <a href="https://www.google.com/maps/dir/San+Jose+International+Airport-Sjc,+Airport+Boulevard,+San+Jose,+CA,+United+States/Shoreline+Amphitheatre,+Amphitheatre+Parkway,+Mountain+View,+CA/@37.3954744,-122.0741791,12z/data=!3m1!4b1!4m18!4m17!1m5!1m1!1s0x808fcbc3fab3c59b:0xbcfa443f6df67e3e!2m2!1d-121.9289375!2d37.3639472!1m5!1m1!1s0x808fb9f776f5e165:0x1ddf014a1b553f3d!2m2!1d-122.0807647!2d37.4267703!2m3!6e0!7e2!8j1463556000!3e0?hl=en">San Jose International Airport (SJC)</a> ~12 miles]]></string>
    <string name="travel_getting_to_shoreline_description" translation_description="Information on getting to Shoreline Amphitheater travel"><![CDATA[In an effort to reduce traffic congestion and reduce our carbon emissions, Google I/O 2019 has committed to be a “No Parking Event*.” This decision has been carefully considered and we are offering you many free options to arrive at the event without requiring a vehicle.<br><br>We will be providing more information as the event approaches.<br><br>*Accessibility parking will be available.]]></string>
    <string name="travel_shuttle_service_description" translation_description="Information on getting to Shoreline Amphitheater travel"><![CDATA[Free event shuttles from all Google recommended hotels will be provided for Google I/O attendees. There will also be select service from San Francisco, Millbrae BART, Mountain View Caltrain, San Jose, and Oakland. We are increasing the shuttle frequency and capacity at the Mountain View Caltrain and Millbrae Bart stations. Check back closer to the event for pick-up schedules and additional shuttle pickup locations. The Shuttle Schedule  will be posted closer to the event.]]></string>
    <string name="travel_off_site_parking_description" translation_description="Information on off-site parking for travel"><![CDATA[Free off-site parking will be provided at <a href="https://www.sjearthquakes.com/avayastadium/parking-directions">Avaya Stadium</a>. Shuttles from Avaya will be provided to/from Google I/O.<br><br> Please indicate on your registration form if you have any ADA or special assistance requirements, and the planning team will follow up with you directly.]]></string>
    <string name="travel_for_public_transportation_description" translation_description="Information on public transportation for travel"><![CDATA[We will offer prepaid public transit passes that will be available for pickup during preregistration. Public transportation to the area is accessible via:<br><br> <a href="http://www.caltrain.com/">Caltrain</a>: Regional rail system<br><br> <a href="http://www.vta.org/getting-around/interactive-light-rail-map">VTA</a>: Light rail system servicing the South Bay<br><br> <a href="https://www.bart.gov/">BART</a>: Bay Area Rapid Transit<br><br> <a href="https://www.amtrak.com/home.html">AMTRAK</a>: Regional rail system<br><br> Public transit doesn’t go directly to Google I/O. Stay tuned for the exact transportation locations serviced by Google I/O event shuttles. ]]></string>
    <string name="travel_biking_description" translation_description="Information on biking for travel"><![CDATA[Complimentary bike parking will be available at Shoreline Amphitheatre in Parking Lot A. The Silicon Valley Bicycle Coalition will provide secure valet parking for your bicycle from 7am until the event ends each day.<br><br> Check Google Maps for the best bike routes and directions. There are two trails, Stevens Creek Trail and Permanente Creek Trail, that are convenient for bike riders heading to Shoreline Amphitheatre.]]></string>
    <string name="travel_ridesharing_description" translation_description="Information on ridesharing for travel"><![CDATA[We will be offering partially subsidized use of Lyft Shared and Uber Pool  to/from Shoreline with the code IO2019. You can redeem this code as long as your destination or pick up is Shoreline Amphitheatre.<br><br> Lyft Share: Download the <a href="https://play.google.com/store/apps/details?id=me.lyft.android&hl=enor">Lyft app</a> and use Lyft Shared using Code: IO2019 with a $15 credit per ride.<br><br> uberPOOL: Download the <a href="https://play.google.com/store/apps/details?id=com.ubercab&hl=en">Uber app</a> to use uberPOOL and share a ride using the <a href="https://r.uber.com/LYMijgu98T">Uber Voucher Link.</a>]]></string>
    <string name="travel_airport_transfers_description" translation_description="Information on ridesharing for travel"><![CDATA[Airport transfers to SFO and SJC from Google I/O will be provided on the last day of the event. Airport transfers will NOT be provided on any other dates.]]></string>
    <string name="event_codelabs_title" translation_description="Header label for general information on &quot;codelabs&quot;.">Codelabs</string>
    <string name="settings_time_zone_label" translate_description="Set time zone in app to PST.">Events in Pacific Time Zone (UTC-8)</string>
    <string name="settings_enable_notifications" translate_description="Turn on notifications.">Enable notifications</string>
    <string name="settings_send_anonymous_usage_statistics" translation_description="Enable sending usage statistics.">Send anonymous usage statistics</string>
    <string name="settings_tos" translation_description="Open link to terms of service.">Terms of service</string>
    <string name="settings_privacy_policy" translation_description="Open link to privacy policy.">Privacy policy</string>
    <string name="settings_oss_licenses" translation_description="Open link to open source licenses.">Open sources licenses</string>
</resources>