<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/nav_first_group"
        android:checkableBehavior="single">

        <item
            android:id="@id/navigation_feed"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/title_home"
            app:contentDescription="@string/title_home" />

        <item
            android:id="@id/navigation_schedule"
            android:icon="@drawable/ic_nav_schedule"
            android:title="@string/title_schedule"
            app:contentDescription="@string/title_schedule" />

        <item
            android:id="@id/navigation_agenda"
            android:icon="@drawable/ic_nav_agenda"
            android:title="@string/agenda"
            app:contentDescription="@string/agenda" />

        <item
            android:id="@id/navigation_codelabs"
            android:icon="@drawable/ic_nav_codelabs"
            android:title="@string/event_codelabs_title"
            app:contentDescription="@string/event_codelabs_title" />

        <item
            android:id="@id/navigation_map"
            android:icon="@drawable/ic_nav_map"
            android:title="@string/title_map"
            app:contentDescription="@string/title_map" />

        <item
            android:id="@id/navigation_explore_ar"
            android:icon="@drawable/ic_nav_signpost"
            android:title="@string/title_explore_io"
            app:contentDescription="@string/title_explore_io" />
    </group>

    <group
        android:id="@+id/nav_second_group"
        android:checkableBehavior="single">

        <item
            android:id="@id/navigation_info"
            android:icon="@drawable/ic_nav_info"
            android:title="@string/title_info"
            app:contentDescription="@string/title_info" />

        <item
            android:id="@id/navigation_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/settings_title"
            app:contentDescription="@string/settings_title" />
    </group>
</menu>
