<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_schedule">

    <fragment
        android:id="@id/navigation_schedule"
        android:name="com.google.samples.apps.iosched.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" >
        <argument
            android:name="showPinnedEvents"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="showAllEvents"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@id/navigation_info"
        android:name="com.google.samples.apps.iosched.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@id/navigation_agenda"
        android:name="com.google.samples.apps.iosched.ui.agenda.AgendaFragment"
        android:label="@string/agenda"
        tools:layout="@layout/fragment_agenda" />
    <fragment
        android:id="@id/navigation_settings"
        android:name="com.google.samples.apps.iosched.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@id/navigation_feed"
        android:name="com.google.samples.apps.iosched.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />
    <fragment
        android:id="@id/navigation_map"
        android:name="com.google.samples.apps.iosched.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

</navigation>