<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction,AppCompatResource">
    <!-- TODO re-enable AppCompatResource check when it works with androidx. b/80097706 -->

    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_item_share_session"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_map"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_item_session_location"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_star"
        android:icon="@drawable/ic_star_border"
        android:title="@string/menu_item_session_star"
        app:showAsAction="always" />

</menu>
