<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.google.samples.apps.iosched.ui.settings.SettingsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            style="@style/Widget.AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationContentDescription="@string/a11y_show_navigation"
                app:navigationIcon="@drawable/ic_menu"
                app:title="@string/settings_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/settings_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/settings_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/margin_normal"
                tools:targetApi="o">

                <!-- AppCompat/MaterialComponents layout inflators don't automatically handle
                     Switch widgets. See https://material.io/develop/android/components/switch/ -->
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/settings_dark_mode"
                    style="@style/Widget.IOSched.SettingsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.darkMode}"
                    android:onCheckedChanged="@{(view, checked) -> viewModel.toggleDarkMode(checked)}"
                    android:text="@string/settings_dark_mode" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/settings_time_zone"
                    style="@style/Widget.IOSched.SettingsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.preferConferenceTimeZone}"
                    android:onCheckedChanged="@{(view, checked) -> viewModel.toggleTimeZone(checked)}"
                    android:text="@string/settings_time_zone_label" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/settings_enable_notifications"
                    style="@style/Widget.IOSched.SettingsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.enableNotifications}"
                    android:onCheckedChanged="@{(view, checked) -> viewModel.toggleEnableNotifications(checked)}"
                    android:text="@string/settings_enable_notifications" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/settings_send_anonymous_usage_statistics"
                    style="@style/Widget.IOSched.SettingsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.sendUsageStatistics}"
                    android:onCheckedChanged="@{(view, checked) -> viewModel.toggleSendUsageStatistics(checked)}"
                    android:text="@string/settings_send_anonymous_usage_statistics" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:dividerHorizontal" />

                <TextView
                    style="@style/Widget.IOSched.AboutHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/about_title" />

                <Button
                    android:id="@+id/faq_link"
                    style="@style/Widget.IOSched.AboutButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_title"
                    app:websiteLink="@{@string/faq_url}" />

                <Button
                    android:id="@+id/terms_of_service"
                    style="@style/Widget.IOSched.AboutButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_tos"
                    app:websiteLink="@{@string/tos_url}" />

                <Button
                    android:id="@+id/privacy_policy"
                    style="@style/Widget.IOSched.AboutButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_privacy_policy"
                    app:websiteLink="@{@string/privacy_policy_url}" />

                <Button
                    android:id="@+id/open_source_license"
                    style="@style/Widget.IOSched.AboutButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_oss_licenses"
                    app:dialogTitle="@{@string/settings_oss_licenses}"
                    app:fileLink="@{@string/oss_file}" />

                <TextView
                    android:id="@+id/version_build_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:minHeight="48dp"
                    android:padding="@dimen/margin_normal"
                    android:text="@string/version_name" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:contentDescription="@string/built_with_material_content_description"
                    android:paddingHorizontal="@dimen/margin_normal"
                    android:scaleType="fitStart"
                    android:src="@drawable/built_with_material" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.samples.apps.iosched.widget.FadingSnackbar
            android:id="@+id/snackbar"
            android:layout_width="@dimen/snackbar_width"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
